# cert-parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
dagger_go/: CERTIFICATE_QUICK_REFERENCE.md  PIPELINE_IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  README.md  corporate_main.go  go.mod  main.go  main_test.go  run-corporate.sh  run.sh  test.sh
dagger_go/architecture/: AUTO_DISCOVERY_EXPLAINED.md  CERTIFICATE_DISCOVERY.md  DAGGER_GO_SDK.md
dagger_go/deployment/: CORPORATE_PIPELINE.md
dagger_go/docs/: 00_START_HERE.md  DAGGER_DOCKER_TESTCONTAINERS_INVESTIGATION.md  EXECUTIVE_SUMMARY.md  README_INVESTIGATION.md  README_TESTCONTAINERS_INVESTIGATION.md  VISUAL_SUMMARY.md
dagger_go/guides/: BUILD_AND_RUN.md  IMPLEMENTATION_QUICK_START.md  INTELLIJ_SETUP.md  PIPELINE_INTERNALS.md  TESTCONTAINERS_IMPLEMENTATION_GUIDE.md  VSC_SETUP.md
dagger_go/integration-testing/: TESTCONTAINERS_PIPELINE_INVESTIGATION.md
dagger_go/reference/: BEFORE_AFTER_COMPARISON.md  QUICK_REFERENCE.md
db_migrations/: README.md  V1_0_0__certs.sql
deployment/: configmap.yaml  deploy.sh  deployment.yaml  kustomization.yaml  namespace.yaml  pdb-networkpolicy.yaml  secret.yaml  service.yaml  undeploy.sh
deployment/scripts/: build-and-test.sh  deploy-local.sh  validate-deployment.sh
docs/: ARCHITECTURE_K8S.md  CONFIGURATION_GUIDE.md  DELIVERABLES_INVENTORY.md  KUBERNETES_DELIVERY.md  QUICKSTART_K8S.md
docs/business/: README.md  certificates-explained.md  how-the-application-works.md  icao-data-sources-and-verification.md  passports-and-trust.md  revocation.md  the-files-we-process.md  what-is-this-application.md
docs/developer/: README.md  architecture.md  cicd-pipeline.md  cms-pkcs7-internals.md  configuration.md  database-persistence.md  dockerfile.md  error-handling-rop.md  http-retry.md  libraries-and-tooling.md  local-development-setup.md  parsing-pipeline.md  railway-rop-framework.md  scheduler.md  testing-strategy.md  tooling-for-newcomers.md
k8s/: DEPLOYMENT.md  configmap.yaml  deployment.yaml  pdb-networkpolicy.yaml  service.yaml
k8s/scripts/: README.md  build-and-test.sh  deploy-local.sh  validate-deployment.sh
python_framework/: README.md  pyproject.toml
python_framework/examples/: create_order.py  fastapi_integration.py  value_objects.py
python_framework/src/railway/: __init__.py  assertions.py  execution.py  failure.py  http_support.py  result.py  result_failures.py
python_framework/tests/: test_assertions.py  test_execution.py  test_failure.py  test_http_support.py  test_result.py  test_result_failures.py
scripts/: build_composite_fixture.py  extract_ldif_fixtures.py
src/cert_parser/: __init__.py  asgi.py  config.py  main.py  pipeline.py  scheduler.py
src/cert_parser/adapters/: cms_parser.py  http_client.py  repository.py
src/cert_parser/domain/: __init__.py  models.py  ports.py
tests/: __init__.py  conftest.py
tests/acceptance/: __init__.py  conftest.py  test_pipeline_e2e.py
tests/fixtures/: README.md
tests/integration/: __init__.py  conftest.py  test_http_flow.py  test_repository.py
tests/unit/: __init__.py  test_asgi.py  test_cms_parser.py  test_http_client.py  test_main.py  test_models.py  test_pipeline.py  test_scheduler.py
