[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "railway-rop"
version = "1.0.0"
description = "Railway-Oriented Programming framework for Python — explicit, composable, functional error handling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "BlueSolution" },
]
keywords = ["railway", "rop", "functional", "result", "monad", "error-handling"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0", "uvicorn>=0.34.0"]
flask = ["flask>=3.1.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM", "TCH"]

[tool.hatch.build.targets.wheel]
packages = ["src/railway"]
